Employee_Attrition/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attrition-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: attrition-frontend
  template:
    metadata:
      labels:
        app: attrition-frontend
    spec:
      containers:
      - name: attrition-frontend
        image: siddhesh01/employee_attrition1-frontend:latest
        imagePullPolicy: Never  # Changed from Always to Never for local images
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: attrition-frontend
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
